# lib_opencv

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/annotation/: CMakeLists.txt
apps/createsamples/: CMakeLists.txt
apps/interactive-calibration/: CMakeLists.txt
apps/traincascade/: CMakeLists.txt
apps/version/: CMakeLists.txt
apps/visualisation/: CMakeLists.txt
cmake/: OpenCVCompilerOptimizations.cmake  OpenCVCompilerOptions.cmake  OpenCVDetectPython.cmake  OpenCVModule.cmake  OpenCVUtils.cmake  PackageConfig.cmake.in  summary.cmake  util.cmake
data/: CMakeLists.txt
include/: CMakeLists.txt
modules/calib3d/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/opencv2/core/hal/: intrin_avx512.hpp
modules/cudacodec/: CMakeLists.txt
modules/cudastereo/: CMakeLists.txt
modules/dnn/: CMakeLists.txt
modules/features2d/: CMakeLists.txt
modules/highgui/: CMakeLists.txt
modules/imgcodecs/: CMakeLists.txt
modules/imgproc/: CMakeLists.txt
modules/ml/: CMakeLists.txt
modules/objdetect/: CMakeLists.txt
modules/photo/: CMakeLists.txt
modules/python/: CMakeLists.txt
modules/superres/: CMakeLists.txt
modules/ts/: CMakeLists.txt
modules/video/: CMakeLists.txt
modules/videoio/: CMakeLists.txt
modules/videoio/cmake/: detect_ffmpeg.cmake
modules/world/: CMakeLists.txt
opt/: folders.csv
