file(GLOB OPENCV_PUBLIC_HEADERS "opencv/*.h*")
set(OPENCV2_PUBLIC_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/opencv2/opencv.hpp PARENT_SCOPE)
set(OPENCV_PUBLIC_HEADERS ${OPENCV_PUBLIC_HEADERS} PARENT_SCOPE)

if(NOT SKIP_INSTALL_ALL AND NOT SKIP_INSTALL_HEADERS)
    install(FILES ${OPENCV_PUBLIC_HEADERS}
        DESTINATION ${OPENCV_INCLUDE_INSTALL_PATH}/opencv
        COMPONENT dev)
    install(FILES ${OPENCV2_PUBLIC_HEADERS}
        DESTINATION ${OPENCV_INCLUDE_INSTALL_PATH}/opencv2
        COMPONENT dev)
endif()
